# inline-java

jni/: jni.cabal
jni/src/common/Foreign/JNI/Unsafe/: Internal.hs
jvm/: jvm.cabal
