name:               jni
version:            1.0
Build-Type:         Simple
cabal-version:      >=1.10
extra-source-files: cat-tokens

Library
  exposed-modules:  Foreign.JNI
                    Foreign.JNI.Types
                    Foreign.JNI.String
                    Foreign.JNI.Safe
                    Foreign.JNI.Types.Safe
  other-modules:    Foreign.JNI.Internal
                    Foreign.JNI.Internal.BackgroundWorker
                    Foreign.JNI.Internal.RWLock
                    Foreign.JNI.NativeMethod
                    Foreign.JNI.Unsafe
                    Foreign.JNI.Unsafe.Internal
                    Foreign.JNI.Unsafe.Internal.Introspection
  ghc-options:      -O2 -Wall -fno-ignore-asserts -fwarn-tabs -fwarn-missing-import-lists -Wunused-packages -F -pgmF./cat-tokens
  cc-options:       -std=c11
  build-depends:    async,
                    base,
                    bytestring,
                    choice,
                    constraints,
                    containers,
                    deepseq,
                    inline-c,
                    linear-base,
                    singletons-base,
                    stm,
                    text
  hs-source-dirs:   src/common, src/linear-types
  include-dirs:     include, include/unix
  default-language: Haskell2010
